# rust-vehicle-auction-advance

./: .env  Cargo.toml  README.md  info
migrations/: 20250116074643_vehicle_auctions.sql
src/: main.rs
src/models/: mod.rs
src/routes/: auction.rs  mod.rs  user.rs  vehicle.rs
tests/: test_auctions.rs  test_users.rs  test_vehicles.rs
